--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://Khuzaima1896:amnaamna@cluster0.b63hjrb.mongodb.net/test
-secretKey="KhuzaimaMoiz"
+JWT_SECRET="KhuzaimaMoiz"
